# PortWorld

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_DAT_SDK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml  support_question.yml
.github/scripts/: run-cloud-compat-tests.sh
.github/workflows/: cli-release.yml  cli-smoke.yml
IOS/: AGENTS.md  Info.plist  README.md
IOS/Config/: Config.xcconfig.template  Debug.xcconfig  Release.xcconfig
IOS/PortWorld/: LaunchScreen.storyboard  PortWorldApp.swift  PortWorldAppIntents.swift  StartupLaunchScreen.storyboard
IOS/PortWorld.xcodeproj/: project.pbxproj
IOS/PortWorldTests/: AssistantPlaybackEngineTests.swift  AudioCollectionManagerTests.swift  (+11 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  app.py  bridge.py  cli.py  config.py  contracts.py  frame_codec.py  openai_realtime_client.py  requirements.in  requirements.txt  session_registry.py
docs/: BACKEND_PRODUCTIZATION_ROADMAP.md  BACKEND_SELF_HOSTING.md  CLI_RELEASE_PROCESS.md  IOS_ASSISTANT_RUNTIME_SIMPLIFICATION_PLAN.md  IOS_AUDIO_ONLY_ASSISTANT_PLAN.md  IOS_PHONEONLY_TO_GLASSES_ROADMAP.md  IOS_WAKE_PHRASE_DEBUG_NOTES.md  realtime-debug-investigation-2026-03-05.md
framework/: .env.example
portworld_cli/: README.md  __init__.py  config_runtime.py  context.py  deploy_artifacts.py  deploy_runtime.py  deploy_state.py  doctor_runtime.py  envfile.py  init_runtime.py  lazy_group.py  logs_runtime.py  main.py  ops_runtime.py  output.py  project_config.py  published_workspace.py  release_identity.py  status_runtime.py  targets.py  update_runtime.py  version.py
portworld_shared/: __init__.py  backend_env.py  providers.py
skills/: README.md
tests/: test_backend_object_store_factory.py  test_backend_storage_settings.py  test_portworld_cli_aws_common.py  test_portworld_cli_aws_deploy.py  test_portworld_cli_aws_doctor.py  test_portworld_cli_aws_runtime_env_vars.py  test_portworld_cli_azure_doctor.py  test_portworld_cli_envfile_aliases.py  test_portworld_cli_project_config_v4.py  test_portworld_cli_provider_config_flow.py  test_portworld_cli_runtime_env_vars.py  test_portworld_cli_targets.py
(+539 files in other folders)
