[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portworld"
dynamic = ["version"]
description = "PortWorld CLI for setup, self-hosting, and managed deploy workflows"
readme = "portworld_cli/README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "backend", "cli", "cloud-run", "portworld", "realtime", "self-hosting"]
authors = [
  {name = "PortWorld Maintainers"},
]
maintainers = [
  {name = "PortWorld Maintainers"},
]
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "certifi==2025.11.12",
  "click==8.3.1",
  "boto3==1.40.74",
  "botocore==1.40.74",
  "fastapi==0.109.2",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "idna==3.11",
  "mcp==1.12.4",
  "azure-identity==1.25.1",
  "azure-storage-blob==12.27.1",
  "google-cloud-storage==2.19.0",
  "Pillow==12.0.0",
  "psycopg[binary]==3.2.10",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.3",
  "sniffio==1.3.1",
  "starlette==0.36.3",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "uvicorn[standard]==0.27.1",
  "websockets==15.0.1",
]

[project.scripts]
portworld = "portworld_cli.main:main"

[project.urls]
Homepage = "https://github.com/portworld/PortWorld"
Repository = "https://github.com/portworld/PortWorld"
Issues = "https://github.com/portworld/PortWorld/issues"
Documentation = "https://github.com/portworld/PortWorld/blob/main/portworld_cli/README.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools.packages.find]
include = ["backend*", "portworld_cli*"]
exclude = ["backend.var*"]

[tool.setuptools.package-data]
portworld_cli = ["templates/*.template"]

[tool.setuptools.dynamic]
version = {attr = "backend.__version__"}
